--- a/src/styles/themes.sass
+++ b/src/styles/themes.sass
@@ -10,6 +10,8 @@
     --card-font-size: 1.125rem
     --card-padding: 20px
     --code-border-color: var(--color-white-alpha-3)
+    --code-font-size: 1.125rem
+    --code-line-height: normal
     --code-line-hover-color: var(--color-mist)
     --code-line-number-color: var(--color-carbon)
     --code-line-number-hover-color: var(--color-slate)
